desheart/grafana/grafana/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: grafana
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - name: grafana
        image: grafana/grafana
        volumeMounts:
