desheart/grafana/grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    k8s-app: grafana
